--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 </script>
 <head>
     <h2>Welcome, {{name}}</h2>
-    <title>GitHUB снимок пользователя</title>
+    <title>GitHUB портфолио</title>
 </head>
 <body>
 <h1>Blank github snapsot.</h1>
