start auto CI/CD

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
         });
 </script>
 <head>
-    <h2>Welcome, {{name}}</h2>
+    <h2>CI/CD complete. Congratulate, {{name}}</h2>
     <title>GitHUB портфолио</title>
 </head>
 <body>
