--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,9 @@
         });
 </script>
 <head>
-    <h2>CI/CD complete. Congratulate, {{name}}</h2>
     <title>GitHUB портфолио</title>
+    <h2>CI/CD complete. ver 10:00</h2>
+    <h3> Congratulate, {{name}}</h3>
 </head>
 <body>
 <h1>Blank github snapsot.</h1>
