--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -21,5 +21,16 @@
 <ul id="visits">
 </ul>
 </p>
+<td>
+    <table>
+        <tbody>
+        <tr th:each="row,rowStat : ${sb.rows}">
+            <td th:text="${rowStat.count}">1</td>
+            <td th:text="${row.variety.name}">Thymus Thymi</td>
+            <td th:text="${row.seedsPerCell}">12</td>
+        </tr>
+        </tbody>
+    </table>
+</td>
 </body>
 </html>
