tune branch for delpoy with number

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 <footer>
 <ul id="visits">
 </ul>
-<p> CI/CD complete. ver 3.00</p>
+<p> CD/CI complete. ver 3.00.1</p>
 </footer>
 </body>
 </html>
