--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,69 +1,103 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
-    <title>GitHUB user profile snapshot</title>
-    <script type="text/javascript">
-        fetch("/api/visits")
-            .then(response => response.json())
-            .then(visits => {
-                visits.forEach(visit => {
-                    const el = document.createElement('li');
-                    el.innerText = visit.description;
-                    document.querySelector('#visits').append(el);
-                });
-            });
-    </script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
+  <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-beta.1.css" type="text/css"/>
 </head>
 
-<body style="width:100%; height:100%; margin:0">
-
-<form action="#" th:action="@{/}" th:object="${indexForm}" method="post">
-    GitHUB username:
-    <input type="text" th:field="*{searchedUsername}"/><input type="submit" value="Find"/>
-</form>
-
-<div style="float:left; width:100%; height:100%" th:fragment="${indexForm} :: contect" th:if="${indexForm.username}">
-    <h2 th:text = "${'GitHUB профиль пользователя '+indexForm.username}"></h2>
-    <div style="float:left; width:30%; height:400px; overflow:auto">
-        <table>
-            <tr>
+<body>
+<div class="py-5 text-white bg-primary text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>GitHUB user profile</h1>
+        <p class="lead mb-4">Short info about github user activity</p>
+        <form class="form-inline justify-content-center" action="#" th:action="@{/}" th:object="${indexForm}" method="post">
+          <div class="input-group my-1">
+            <input type="text" class="form-control mr-3 my-1" placeholder="github login" id="inlineFormInputGroup" th:field="*{searchedUsername}"/></div>
+          <button type="submit" class="btn btn-secondary">Search</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="py-5">
+  <div class="container" th:if="${indexForm.username}">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="text-primary pt-3" th:text = "${'Repositories '+indexForm.username+':'}" >Owner's repository:</h2>
+            <table class="table">
+              <thead>
+              <tr>
+                <th>#</th>
                 <th>Repository</th>
-                <th>Branches</th>
+                <th>Count branch</th>
                 <th>Stars</th>
-            </tr>
-                <tbody>
-                <tr th:each="row : ${indexForm.repoList}">
-                    <td><a th:href="${'/repo/'+row.id}" th:text = "${row.description}" method="get">text</a></td>
-                    <td th:text="${row.count_branches}">branches</td>
-                    <td th:text="${row.stars}">count stars</td>
-                </tr>
-                </tbody>
-        </table>
+              </tr>
+              </thead>
+              <tbody>
+              <tr th:each="row, index : ${indexForm.repoList}">
+                <td th:text="${index.index}"></td>
+                <td><a th:href="${'/repo/'+row.id}" th:text = "${row.description}" method="get">text</a></td>
+                <td th:text="${row.count_branches}">branches</td>
+                <td th:text="${row.stars}">count stars</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
-    <div th:if="${indexForm.selectedRepo}" style="float:right; width:70%; height:400px">
-        <h2 th:text="${'Repository: '+indexForm.selectedRepo}">REPO</h2>
-        <h3 th:text="${indexForm.username+' commit median hour - ' + indexForm.median_hour}">Median Time</h3>
-        <table>
-            <caption> Time commits</caption>
-            <td>Hour</td>
+  </div>
+</div>
+<div class="py-5">
+  <div class="container" th:if="${indexForm.selectedRepo}">
+    <div class="row mb-5">
+      <div class="col-md-12">
+        <h2 class="text-primary" th:text="${'Commit frequences in '+indexForm.selectedRepo}">Commits frequences on {repository}</h2>
+        <p class="text-primary pt-4" th:text="${indexForm.username+' commit median hour - ' + indexForm.median_hour}">Median hour</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <caption class="text-primary pt-4"> Count commits by time</caption>
+        <table class="table border border-dark table-bordered text-center">
+          <thead>
+          <tr>
+            <th class="text-left">Hour</th>
             <tc th:each="col, num : ${indexForm.timestamp}">
-                <td th:text="${num.index}">number</td>
+              <th th:text="${num.index}">number</th>
             </tc>
-            <tbody>
-                <td>Count commits</td>
-                <tc th:each="col, num : ${indexForm.timestamp}">
-                    <td th:text="${col}">HOUR</td>
-                </tc>
-            </tbody>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td class="text-left">Commits count</td>
+            <tc th:each="col, num : ${indexForm.timestamp}">
+              <td th:text="${col}">HOUR</td>
+            </tc>
+          </tr>
+          </tbody>
         </table>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-md-12"> </div>
+    </div>
+  </div>
 </div>
-<div th:fragment="fragments/footer :: footer">
-    <ul id="visits">
-    </ul>
-    <p> CD/CI complete. ver 3.00.4</p>
+<div class="bg-dark text-white py-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 mt-3 text-center">
+        <p>© Created by Axvad &nbsp;at 2017 </p>
+      </div>
+    </div>
+  </div>
 </div>
-
 </body>
 </html>
