--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,9 +100,11 @@
 <div class="bg-dark text-white py-0">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 mt-3 text-center">
-        <p>© Created by Axvad &nbsp;at 2017 </p>
-        <p id="visitors">00 visits</p>
+      <div class="col-md-6 mt-3 text-center">
+        <p class="text-left">© Created by Axvad &nbsp;at 2017 </p>
+      </div>
+      <div class="col-md-6 mt-3 text-center">
+        <p class="text-right" id="visitors">00 visits</p>
       </div>
     </div>
   </div>
